@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<addon id="plugin.video.dr.dk.bonanza" version="3.0.3" name="DR.dk Bonanza" provider-name="twinther">
+<addon id="plugin.video.dr.dk.bonanza" version="3.1.0" name="DR.dk Bonanza" provider-name="twinther">
     <requires>
         <import addon="xbmc.python" version="2.1.0"/>
         <import addon="script.module.simplejson" version="2.0.10"/>
         <import addon="script.module.buggalo" version="1.1.2"/>
     </requires>
     <extension point="xbmc.python.pluginsource" library="addon.py">
-        <provides>audio video</provides>
+        <provides>video</provides>
     </extension>
     <extension point="xbmc.addon.metadata">
         <summary lang="en">Best and worst from DR's archives</summary>
